[gd_scene format=3 uid="uid://basbgf5y0xb03"]

[ext_resource type="Script" uid="uid://dd6sqy4yair1s" path="res://Scenes/Test/test_scene.gd" id="1_yf2bc"]

[node name="TestScene" type="Control" unique_id=1252360429]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yf2bc")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1561782792]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48677072, 0.5370987, 0.58383155, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1119533271]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=739215161]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1549445123]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SCENE TRANSITION TEST"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=515211185]
layout_mode = 2

[node name="TransitionTypeLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1136350158]
layout_mode = 2
text = "\"Current Transition: Fade\""
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=761041457]
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=3461018]
layout_mode = 2
text = "Use arrows ← → to change transition type
SPACE to reload scene
ESC to return to menu"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=40923833]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=173414067]
layout_mode = 2
alignment = 1

[node name="PrevTypeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=1160446322]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "← Previous Type"

[node name="NextTypeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=406133184]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Next Type →"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1755685558]
layout_mode = 2

[node name="ReloadButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=69327364]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Reload Scene (SPACE)"

[node name="TestWithLoadingButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=569347781]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Test With Loading Label"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=638093026]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Back to Menu (ESC)"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PrevTypeButton" to="." method="_on_prev_type_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextTypeButton" to="." method="_on_next_type_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TestWithLoadingButton" to="." method="_on_test_with_loading_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
